css/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
}

ul, ol {
	list-style-type: none;
}


a {
    text-decoration: none;
}

img {
	display: block;
	max-width: 100%;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    line-height: 1.5;
    font-family: "Roboto", sans-serif;
    background: #fff;
    overflow-x: hidden;
    color: #434455;
}

main {
    flex-grow: 1;
}

.container {
    margin: 0 auto;
    max-width: 1158px;
    padding: 0 15px;
}

.section {
    padding: 120px 0;
}

.header {
    border-bottom: 1px solid #e7e9fc; 
    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); 
}


/* nav part  */

.header .container {
    display: flex;
    justify-content: space-between;
}

.nav {
    display: flex;
    align-items: center;
}

.logo {
    display: inline-block;
    margin-right: 76px;
    font-family: "Raleway", sans-serif;
    font-weight: 700;
    font-size: 18px;
    line-height: 117%;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    color: #4d5ae5;

}

.logo-black {
    color: #2e2f42;
}

.header_list {
    display: flex;
    gap: 40px;
}

.header_list-item {
    padding: 24px 0;
}

.header_list-item:first-child .header_list-item-link{
    position: relative;
    color: #404bbf; 
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.header_list-item-link {
    padding: 24px 0;
    font-weight: 500;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    color: #2e2f42; 
}

.header_list-item-link:hover,
.header_list-item-link:focus {
    color: #404bbf;
}

.header_list-item:first-child .header_list-item-link::after {
    position: absolute;
    content: "";
    left: 0;
    bottom: -1px;
    display: block;
    border-radius: 2px;
    width: 100%;
    height: 4px;
    background-color: #404bbf;
  }



/* address-part */

.address {
    font-style: normal;
}

.header_list-item-contact {
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    color: #434455;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.header_list-item-contact:hover,
.header_list-item-contact:focus {
    color: #404bbf;
}

/* promo section */

.promo {
    padding: 188px 0;
    margin: 0 auto;
    max-width: 1440px;
    background-image:linear-gradient(
        to bottom, 
        rgba(46, 47, 66, 0.7), 
        rgba(46, 47, 66, 0.7)
        ), url(../images/people-office.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}


.promo .container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.promo-title {
    max-width: 496px;
    font-weight: 700;
    font-size: 56px;
    line-height: 107%;
    letter-spacing: 0.02em;
    text-align: center;
    color: #fff;
}

.promo-button {
    margin-top: 48px;
    font-weight: 500;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.04em;
    color: #fff;
    border-radius: 4px;
    border: none;
    min-width: 169px;
    height: 56px;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
    background: #4d5ae5;
    cursor: pointer;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.promo-button:hover,
.promo-button:focus {
    background: #404bbf;
}

/* features section  */

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0, 0, 0, 0);
    overflow: hidden;
  }

.features_list {
    display: flex;
    justify-content: space-between;
    gap: 24px;
}

.features_list-item {
    flex-basis: calc((100% - 3 * 24px) / 4)
}

.features-title {
    margin-bottom: 8px;
    font-weight: 500;
    font-size: 20px;
    line-height: 120%;
    letter-spacing: 0.02em;
    color: #2e2f42;
}

.features-decr {
    font-weight: 400;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    color: #434455;
}

.features-icon_block {
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid #8e8f99;
    border-radius: 4px;
    width: 264px;
    height: 112px;
    margin-bottom: 8px;
    background: #f4f4fd;
}



/* our team section  */

.our_team {
    background: #f4f4fd;
}

.section-title {
    margin-bottom: 72px;
    font-weight: 700;
    font-size: 36px;
    line-height: 111%;
    letter-spacing: 0.02em;
    text-align: center;
    text-transform: capitalize;
    color: #2e2f42;
}

.team_card-list {
    display: flex;
    gap: 24px;
    justify-content: space-between;
}

.team_card-list-item {
    width: calc((100% - 72px) / 4);
    border-radius: 0 0 4px 4px;
    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
    background: #fff;
}

.team_card-list-descr_box {
    padding: 32px 0;
}

.team_card-name {
    margin-bottom: 8px;
    font-weight: 500;
    font-size: 20px;
    line-height: 120%;
    letter-spacing: 0.02em;
    text-align: center;
    color: #2e2f42;
}

.team_card-position {
    font-weight: 400;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    text-align: center;
    color: #434455;
}

.team_card-icon_list {
    display: flex;
    justify-content: center;
    gap: 24px;
    margin-top: 8px;
}

.team_card-icon_list-item {
    width: 40px;
    height: 40px;
}

.team_card-icon_list-item-link {
    width: 100%;
    height: 100%;
    background-color: #4d5ae5;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.team_card-icon_list-item-link:hover,
.team_card-icon_list-item-link:focus {
    background: #404bbf;
}

.team_card-icon {
    fill: #f4f4fd;
}

/* our_portfolio section  */

.portfolio_card-list {
    display: flex;
    flex-wrap: wrap;
    row-gap: 48px;
    column-gap: 24px;
}

.portfolio_card-list-descr_box {
    padding: 32px 16px;
    border-bottom: 1px solid #e7e9fc;
    border-left: 1px solid #e7e9fc;
    border-right: 1px solid #e7e9fc;
}

.portfolio_card-list-item {
    width: calc((100% - 48px) / 3);
    background: #fff;
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.portfolio_card-list-item:hover {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
}


.portfolio_card-name {
    margin-bottom: 8px;
    font-weight: 500;
    font-size: 20px;
    line-height: 120%;
    letter-spacing: 0.02em;
    color: #2e2f42;
}

.portfolio_card-position {
    font-weight: 400;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    color: #434455;
}

.portfolio_card-overlay_box {
    position: relative;
    overflow: hidden;
    
}

.portfolio_card-list-item:hover .portfolio_card-overlay-text {
    transform: translateY(0%);
}


.portfolio_card-overlay-text {
    position: absolute;
    top: 0;
    padding: 40px 32px;
    font-weight: 400;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    color: #f4f4fd;
    background-color: #4d5ae5;
    width: 100%;
    height: 100%;
    transform: translateY(100%);
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

/* footer  */

.footer {
    padding: 100px 0;
    background: #2e2f42;
}

.footer .container {
    display: flex;
    align-items: baseline;
}

.footer-logo-block {
    margin-right: 120px;
}

.footer-logo {
    display: inline-block;
    margin-bottom: 16px;
}

.logo-white {
    color: #f4f4fd;
}

.footer-message {
    max-width: 264px;
    font-weight: 400;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    color: #f4f4fd;
}

.social_media-title {
    margin-bottom: 16px;
    font-weight: 500;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: 0.02em;
    color: #FFFFFF;
}

.social_media-icon_list-item {
    width: 40px;
    height: 40px;
}

.social_media-icon_list-item-link {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: #4d5ae5;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.social_media-icon_list-item-link:hover,
.social_media-icon_list-item-link:focus {
    background: #31D0AA;
}

.social_media-icon {
    fill: #f4f4fd;
}

.social_media-icon_list {
    display: flex;
    gap: 16px;
}

